<resources>
    <string name="app_name">友盟Demo</string>
    <string name="um_common_entrance_name">集成组件化－统计</string>
    <string name="um_analytics_entrance_name">集成组件化－推送</string>
    <string name="um_share_entrance_name">集成组件化－分享</string>
    <string name="um_error_entrance_name">集成组件化－错误</string>

    <!--统计SDK字段 start-->
    <string name="online_config">在线参数</string>
    <string name="make_crash">程序崩溃</string>
    <string name="kv_event">多属性(K-V)事件</string>
    <string name="normal_event">普通事件</string>
    <string name="event_duration">数值型统计</string>
    <string name="text_dplus">U-Dplus接口</string>
    <string name="text_ana">U-APP接口</string>
    <string name="page_stack">统计 Fragment 页面(Stack)</string>
    <string name="page_tabs"> 统计 Fragment 页面( Tab )</string>
    <string name="social_analytics">社交统计</string>
    <string name="js_in_webview">Webview 统计</string>
    <string name="flush_cache">手动发送数据</string>
    <string name="signin">用户登录</string>
    <string name="signoff">用户退出</string>
    <string name="game_start">关卡开始</string>
    <string name="game_fail">关卡失败</string>
    <string name="game_finish">关卡通过</string>
    <string name="game_pay">充值付费(真实消费)</string>
    <string name="orderid">有订单的充值付费(真实消费)</string>
    <string name="game_paynbuy">购买物品(真实消费)</string>
    <string name="game_buy">购买物品(虚拟消费)</string>
    <string name="game_use">使用物品</string>
    <string name="game_bonus">游戏奖励</string>
    <string name="webview_tv">在webview中调用统计分析代码</string>
    <string name="ana_name">统计分析</string>
    <string name="game_name">游戏分析</string>
    <string name="event_cc">结构化事件</string>
    <string name="set_supper">设置超级属性</string>
    <string name="get_suppers">获取超级属性</string>
    <string name="clear_suppers">清除超级属性</string>
    <string name="event_dplus_nomal">track事件</string>
    <string name="event_dplus">自定义的track事件</string>
    <string name="set_first_launch_event">关注首次触发事件</string>
    <!--统计SDK字段 end-->

    <!--以下为share所用字段-->
    <string name="facebook_app_id">1266254913438718</string>


    <string name="umeng_update_content">版本号：6.6.0\n1.Dplus合并\n2.删除冗余接口\n3.修改缓存方式</string>
    <string name="umeng_home_title">U-Share产品Demo</string>
    <string name="umeng_home_update">新版更新内容</string>
    <string name="umeng_share_title">分享</string>
    <string name="umeng_auth_title">授权</string>
    <string name="umeng_delauth_title">删除授权</string>
    <string name="umeng_getinfo_title">获取用户信息</string>
    <string name="umeng_check_title">自检工具</string>
    <string name="umeng_menu_title">分享菜单模板</string>

    <string name="umeng_check_sign">检查签名</string>
    <string name="umeng_check_sina">检查新浪</string>
    <string name="umeng_check_wx">检查微信</string>
    <string name="umeng_check_alipay">检查支付宝</string>
    <string name="umeng_check_qq">检查qq</string>
    <string name="umeng_check_fb">检查facebook</string>
    <string name="umeng_check_vk">vkontakte</string>
    <string name="umeng_choose_style">选择分享类型</string>

    <string name="umeng_sharebutton_copy">复制文本</string>
    <string name="umeng_sharebutton_copyurl">复制连接</string>


    <!-- push start -->
    <string name="local_notification">本地通知</string>
    <string name="new_local_notification">新建本地通知</string>
    <string name="modify_local_notification">修改本地通知</string>
    <string name="add_local_notification">新建</string>
    <string name="create_local_notification">添加</string>
    <string name="update_local_notification">修改</string>
    <string name="clear_local_notification">清除</string>
    <string name="local_notification_title">标题</string>
    <string name="local_notification_content">内容</string>
    <string name="local_notification_ticker">提示</string>
    <string name="local_notification_datetime">时间</string>
    <string name="local_notification_repeatingnum">重复数</string>
    <string name="local_notification_repeatingunit">重复单位</string>
    <string name="local_notification_repeatinginterval">重复间隔</string>
    <string name="local_notification_specialday">节日</string>
    <string name="year">年</string>
    <string name="lunarYear">年(阴历)</string>
    <string name="month">月</string>
    <string name="lunarMonth">月(阴历)</string>
    <string name="day">日</string>
    <string name="lunarDay">日(阴历)</string>
    <string name="hour">小时</string>
    <string name="minute">分钟</string>
    <string name="second">秒</string>
    <string name="repeatingNum">重复数</string>
    <string name="repeatingUnit">重复单位</string>
    <string name="repeatingInterval">重复间隔</string>
    <string name="specialDay">节日</string>
    <string name="title">标题</string>
    <string name="content">内容</string>
    <string name="ticker">提示</string>
    <string name="flags">Flags</string>
    <string name="defaults">Defaults</string>
    <string name="smallIconDrawable">小图标</string>
    <string name="largeIconDrawable">大图标</string>
    <string name="soundDrawable">声音</string>
    <string name="playVibrate">振动</string>
    <string name="playLights">闪光</string>
    <string name="playSound">声响</string>
    <string name="screenOn">开屏</string>
    <string name="layoutId">自定义样式</string>
    <string name="layoutTitleId">自定义标题</string>
    <string name="layoutContentId">自定义内容</string>
    <string name="layoutIconId">自定义小图标</string>
    <string name="layoutIconDrawableId">自定义大图标</string>
    <string name="notificationSetting">通知设置</string>
    <string name="builderSetting">通知样式设置</string>
    <string name="repeatingNumHint">-1表示一直重复</string>
    <string name="needed">必填</string>
    <string name="search">搜索</string>
    <string name="search_text">根据通知ID或标题内容查找...</string>
    <string name="clearlog">清除日志</string>
    <string name="show_card_message">展示插屏</string>
    <string name="edalias">Tags/Alias/Excusive Alias</string>
    <string name="edaliasType">Alias Type</string>

    <!-- push end -->

    <!--统计SDK字段 start-->
    <string name="java_name">java异常</string>
    <string name="cpp_name">cpp异常</string>
    <!--统计SDK字段 end-->
</resources>
