<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/umeng_example_analytics_game_start"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:onClick="onButtonClick"
            android:text="@string/game_start"></Button>

        <Button
            android:id="@+id/umeng_example_analytics_game_fail"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:onClick="onButtonClick"
            android:text="@string/game_fail"></Button>

        <Button
            android:id="@+id/umeng_example_analytics_game_finish"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:onClick="onButtonClick"
            android:text="@string/game_finish"></Button>

        <Button
            android:id="@+id/umeng_example_analytics_game_pay"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:onClick="onButtonClick"
            android:text="@string/game_pay"></Button>

        <Button
            android:id="@+id/umeng_example_analytics_game_paynbuy"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:onClick="onButtonClick"
            android:text="@string/game_paynbuy"></Button>

        <Button
            android:id="@+id/umeng_example_analytics_game_buy"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:onClick="onButtonClick"
            android:text="@string/game_buy"></Button>

        <Button
            android:id="@+id/umeng_example_analytics_game_use"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:onClick="onButtonClick"
            android:text="@string/game_use"></Button>

        <Button
            android:id="@+id/umeng_example_analytics_game_bonus"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:onClick="onButtonClick"
            android:text="@string/game_bonus"></Button>

        <Button
            android:id="@+id/umeng_example_analytics_game_signin"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:onClick="onButtonClick"
            android:text="@string/signin"></Button>

        <Button
            android:id="@+id/umeng_example_analytics_game_signoff"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:onClick="onButtonClick"
            android:text="@string/signoff"></Button>

        <Button
            android:id="@+id/umeng_example_analytics_game_orderid"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:onClick="onButtonClick"
            android:text="@string/orderid"></Button>
    </LinearLayout>

</ScrollView>