<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center"
android:orientation="vertical">
<Button
    android:id="@+id/um_analytics_entrance"
    android:text="@string/um_common_entrance_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
<Button
    android:id="@+id/um_push_entrance"
    android:text="@string/um_analytics_entrance_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
<Button
    android:id="@+id/um_share_entrance"
    android:text="@string/um_share_entrance_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
<Button
    android:id="@+id/um_error_entrance"
    android:text="@string/um_error_entrance_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

</LinearLayout>